# ap_gcc

./: patch_linux_mac_notes.txt  vcproj2cmake.rb  vrs-trunk-r6691-gcc-build-fix.patch  vrs-trunk-r6691-linux-cga-context-foo-crash-workaround.patch  vrs-trunk-r6691-mac-qt4-debug-only.patch
documentation/: ap_gcc.aux  ap_gcc.pdfsync  ap_gcc.tex
documentation/chapters/: challenges.tex  cmake.tex  constraints.tex  finalwords.tex  guidelines.tex  introduction.tex  requirements.tex  results.tex  tutorial.tex  unixfe.tex
prototypes/: CMakeLists.txt  Makefile  igdb.rb  igdb_starter.gdbscript  profile_test.cpp
prototypes/CMakeModules/: custom.cmake
slides/: ap_gcc_demo.txt
slides/final.key/thumbs/: mt0-4.tiff  st0.tiff  st10-1.tiff  st10-2.tiff  st10-3.tiff  st10-5.tiff  st10.tiff  st11-2.tiff  st11-3.tiff  st11.tiff  st12-1.tiff  st12-2.tiff  st12-3.tiff  st12-4.tiff  st12.tiff  st13-2.tiff  st13.tiff  st14-2.tiff  st14-3.tiff  st14.tiff  st15-1.tiff  st15.tiff  st16-1.tiff  st16-2.tiff  st16-3.tiff  st16.tiff  st17-1.tiff  st17-2.tiff  st17.tiff  st18-3.tiff  st18.tiff  st19-1.tiff  st19.tiff  st2-5.tiff  st2-7.tiff  st20-1.tiff  st20-2.tiff  st20-3.tiff  st20.tiff  st21-1.tiff  (+30 more)
slides/milestone_0.key/thumbs/: st0.tiff  st1.tiff  st2-1.tiff  st2-2.tiff  st2.tiff  st4.tiff
slides/milestone_1.key/thumbs/: st0.tiff  st1-1.tiff  st2.tiff  st3.tiff
slides/milestone_2.key/: Picture 1.tiff
slides/milestone_2.key/thumbs/: st0.tiff  st1-1.tiff  st2-1.tiff  st2.tiff  st3-1.tiff  st3-2.tiff  st3-3.tiff  st4.tiff  (+5 more)
slides/milestone_3.key/: Picture 13.tiff  droppedImage.tiff
(+10 files in other folders)
